# mfsignal

./: .pre-commit-config.yaml  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: auto_formatter.py  enforce_uv.py  test_runner.py  type_checker.py
data/: amc.py
tests/: test_amc.py  test_amc_sync.py  test_main.py
